operator/src/main/resources/com/github/streamshub/console/dependents/console.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: placeholder
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      serviceAccountName: placeholder
      volumes:
      - name: work
        emptyDir: {}
      - name: config
        secret:
          secretName: placeholder
      containers:
      ### API
      - name: console-api
        image: quay.io/streamshub/console-api
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: config
          mountPath: /deployments/config
        - name: work
          mountPath: /tmp
        startupProbe:
          httpGet:
            path: /health/started
            port: http
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 24
        livenessProbe:
          httpGet:
            path: /health/live
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /health/ready
            port: http
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
#      ### User Interface
#      - name: console-ui
#        image: quay.io/streamshub/console-ui
#        volumeMounts:
#        - name: config
#          mountPath: /deployments/config
#        - name: work
#          mountPath: /app/.next/cache
#        ports:
#        - containerPort: 3000
#          name: http
#        env:
#        - name: NEXTAUTH_SECRET
#          valueFrom:
#            secretKeyRef:
#              name: placeholder
#              key: NEXTAUTH_SECRET
#        - name: NEXTAUTH_URL
#          value: 'https://${CONSOLE_HOSTNAME}'
#        - name: BACKEND_URL
#          value: 'http://127.0.0.1:8080'
#        - name: CONSOLE_CONFIG_PATH
#          value: /deployments/config/console-config.yaml
#        - name: CONSOLE_MODE
#          value: read-only
#        - name: LOG_LEVEL
#          value: info
#        startupProbe:
#          httpGet:
#            path: /healthz
#            port: http
#            scheme: HTTP
#          initialDelaySeconds: 5
#          periodSeconds: 10
#          timeoutSeconds: 10
#          successThreshold: 1
#          failureThreshold: 3
#        livenessProbe:
#          httpGet:
#            path: /healthz
#            port: http
#            scheme: HTTP
#          initialDelaySeconds: 5
#          periodSeconds: 10
#          timeoutSeconds: 10
#          successThreshold: 1
#          failureThreshold: 3
#        readinessProbe:
#          httpGet:
#            path: /healthz
#            port: http
#            scheme: HTTP
#          initialDelaySeconds: 5
#          periodSeconds: 10
#          timeoutSeconds: 10
#          successThreshold: 1
#          failureThreshold: 3
#        securityContext:
#          readOnlyRootFilesystem: true
#          allowPrivilegeEscalation: false
#          seccompProfile:
#            type: RuntimeDefault
#          runAsNonRoot: true
#          capabilities:
#            drop:
#            - ALL
