operator/src/main/resources/com/github/streamshub/console/dependents/console.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: console-ui
spec:
  ports:
  - name: placeholder
    port: 0
    targetPort: 0
  selector: {}
