operator/src/main/resources/com/github/streamshub/console/dependents/console.ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: console-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  defaultBackend:
    service:
      name: console-ui
      port:
        number: 80
  rules:
    - host: placeholder
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: console-ui
                port:
                  number: 80
